--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js",
-    "build-dev": "webpack --watch"
+    "watch": "nodemon --watch \"./webpack.*.*\" --exec \"npm start\"",
+    "start": "wp --mode development",
+    "build": "wp build"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +28,10 @@
     "sunrise-sunset-js": "^2.2.1"
   },
   "devDependencies": {
+    "mini-html-webpack-plugin": "^3.1.3",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-nano": "^1.1.1",
+    "webpack-plugin-serve": "^1.6.0"
   }
 }
