--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
+    "astronomy-engine": "^2.1.15",
     "axios": "^1.1.3",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
