--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "website",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --watch \"./webpack.*.*\" --exec \"npm start\"",
     "start": "wp --mode development",
-    "build": "wp build"
+    "build": "wp build",
+    "api": "node ./server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +16,7 @@
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "astronomy-engine": "^2.1.15",
-    "axios": "^1.1.3",
+    "axios": "^1.3.4",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.5",
     "body-parser": "^1.20.1",
